k8s/weighted-routing/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  namespace: dev
  name: demoservice
spec:
  hosts:
  - "demoservice.dev.sandbox01.lamdax-sandbox.com"
  gateways:
  - devgateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: demoservice-svc
        subset: baseline
        port:
          number: 8080
      weight: 90
    - destination:
        host: demoservice-svc
        subset: routea
        port:
          number: 8080
      weight: 10
